@@ -16,14 +16,13 @@ public class APIUtils {
 
     }
 
-    public static boolean executedWithoutException(@NotNull ThrowingRunnable runnable, Exception... exceptions) {
-        return executedWithoutException(runnable, List.of(exceptions));
-    }
-
-    public static boolean executedWithoutException(@NotNull ThrowingRunnable runnable) {
-        return executedWithoutException(runnable, Collections.emptyList());
-    }
-
+    /**
+     * Executes the given `ThrowingRunnable` and returns `true` if it completes without throwing an exception, or if the thrown exception is not contained in the specified collection of exceptions.
+     *
+     * @param runnable   the `ThrowingRunnable` to execute
+     * @param exceptions a collection of exceptions that should not be counted as a failure
+     * @return `true` if the `ThrowingRunnable` completes without throwing an exception or if the thrown exception is not contained in the specified collection of exceptions
+     */
     public static boolean executedWithoutException(@NotNull ThrowingRunnable runnable, Collection<Exception> exceptions) {
         try {
             runnable.run();
@@ -33,14 +32,34 @@ public class APIUtils {
         }
     }
 
-    public static boolean executedWithoutExceptionL(@NotNull Runnable runnable, Exception... exceptions) {
-        return executedWithoutExceptionL(runnable, List.of(exceptions));
+    /**
+     * Executes the given `ThrowingRunnable` and returns `true` if it completes without throwing an exception.
+     *
+     * @param runnable the `ThrowingRunnable` to execute
+     * @return `true` if the `ThrowingRunnable` completes without throwing an exception
+     */
+    public static boolean executedWithoutException(@NotNull ThrowingRunnable runnable) {
+        return executedWithoutException(runnable, Collections.emptyList());
     }
 
-    public static boolean executedWithoutExceptionL(@NotNull Runnable runnable) {
-        return executedWithoutExceptionL(runnable, Collections.emptyList());
+    /**
+     * Executes the given `ThrowingRunnable` and returns `true` if it completes without throwing an exception that is contained in the specified array of exceptions.
+     *
+     * @param runnable   the `ThrowingRunnable` to execute
+     * @param exceptions an array of exceptions that should not be counted as a failure
+     * @return `true` if the `ThrowingRunnable` completes without throwing an exception or if the thrown exception is not contained in the specified array of exceptions
+     */
+    public static boolean executedWithoutException(@NotNull ThrowingRunnable runnable, Exception... exceptions) {
+        return executedWithoutException(runnable, List.of(exceptions));
     }
 
+    /**
+     * Executes the given `Runnable` and returns `true` if it completes without throwing an exception, or if the thrown exception is not contained in the specified collection of exceptions.
+     *
+     * @param runnable   the `Runnable` to execute
+     * @param exceptions a collection of exceptions that should not be counted as a failure
+     * @return `true` if the `Runnable` completes without throwing an exception or if the thrown exception is not contained in the specified collection of exceptions
+     */
     public static boolean executedWithoutExceptionL(@NotNull Runnable runnable, Collection<Exception> exceptions) {
         try {
             runnable.run();
@@ -48,5 +67,15 @@ public class APIUtils {
         } catch (Exception e) {
             return !exceptions.contains(e);
         }
+    }
+
+    /**
+     * Executes the given `Runnable` and returns `true` if it completes without throwing an exception.
+     *
+     * @param runnable the `Runnable` to execute
+     * @return `true` if the `Runnable` completes without throwing an exception
+     */
+    public static boolean executedWithoutExceptionL(@NotNull Runnable runnable) {
+        return executedWithoutExceptionL(runnable, Collections.emptyList());
     }
 }
